test/test_suite/errors/error_semantic_fails.c3
optenum Repeater
{
    A,
    A // #error: This opt constant is declared twice.
}
